objects/FormData__c.object
<CustomObject>
    <fields>
        <fullName>Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FlagUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlagUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Others_Enter_here__c</fullName>
        <label>For Others Enter here</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <label>Hobby</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Travelling</fullName>
                </value>
                <value>
                    <fullName>Bike Ride</fullName>
                </value>
                <value>
                    <fullName>Car Ride</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B.Tech/B.E</fullName>
                </value>
                <value>
                    <fullName>B.A</fullName>
                </value>
                <value>
                    <fullName>M.Tech</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FormData</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>S.No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TendigitPhone</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( Phone_Number__c)  &lt;&gt; 10</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Please enter 10 digit phone number.</errorMessage>
    </validationRules>
</CustomObject>